# opengl-refapp

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.include  Makefile.include.rpi  Makefile.include.x11  README  README.md  configure.ac  main.c  opengl-context.c  opengl-context.h  platform-egl-context-dispmanx.c  platform-egl-context-priv.h  platform-egl-context-x11.c  platform-egl-context-x11.h  platform-egl-context.h  platform-egl-log.c  platform-egl-log.h  platform-opengl-draw.c  platform-opengl-draw.h
app/: Makefile.am  main.c  opengl-plugin-params-helper.c  opengl-plugin-registry.c  opengl-plugin-registry.h  opengl-user-context-helper.c  opengl-user-context-helper.h
platform-lib/: Makefile.am  libplatformopengl.la  opengl-context-priv.h  opengl-context.c  opengl-context.h  opengl-context.lo  platform-egl-context-dispmanx.c  platform-egl-context-priv.h  platform-egl-context-x11.c  platform-egl-context-x11.lo  platform-egl-context.h  platform-egl-log.h  platform-egl-log.lo
platform-lib/.libs/: libplatformopengl.la  libplatformopengl.lai  libplatformopengl.so.0  libplatformopengl.so.0.0.0
plugins/: Makefile.am  libplugin_scrolling_text.la  libplugin_static_picture.la  libplugins.la  opengl-plugin-params-helper.c  opengl-plugin-params-helper.h  plugin.h  plugins.c  plugins.lo  scrolling-text-plugin.c  scrolling-text-plugin.lo  static-picture.c  static-picture.lo
plugins/.libs/: libplugin_scrolling_text.la  libplugin_scrolling_text.lai  libplugin_scrolling_text.so.0  libplugin_scrolling_text.so.0.0.0  libplugin_static_picture.la  libplugin_static_picture.lai  libplugin_static_picture.so.0  libplugin_static_picture.so.0.0.0  libplugins.lai  libplugins.so.0  libplugins.so.0.0.0
scripts/: configure-for-debug.sh  run-valgrind.sh  valgrind-generate-suppresions.sh
tests/plugininitializertests/: Makefile.am  test-plugin-initializer.c  testplugininitializer
